--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
     --cor-fundo: #01080E ;
-    --cor-principal: #0B0D20 ;
-    --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
-    --cor-texto: #D7F9FF;
+    --cor-principal: #ff1212 ;
+    --cor-secundaria: #ef2e4b; 
+    --cor-destaque: #ff0000;
+    --cor-texto: #eef2f3;
 
 }
 
