--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
     --cor-fundo: #01080E ;
     --cor-principal: #ff1212 ;
-    --cor-secundaria: #ef2e4b; 
+    --cor-secundaria: #000000; 
     --cor-destaque: #e84e5d;
     --cor-texto: #eef2f3;
 
