--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-fundo: #01080E ;
     --cor-principal: #ff1212 ;
     --cor-secundaria: #000000; 
-    --cor-destaque: #e84e5d;
+    --cor-destaque: #000000;
     --cor-texto: #eef2f3;
 
 }
