--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-fundo: #01080E ;
+    --cor-fundo: #000000 ;
     --cor-principal: #ff1212 ;
     --cor-secundaria: #000000; 
     --cor-destaque: #000000;
